--- a/css/style.css
+++ b/css/style.css
@@ -161,6 +161,11 @@ h2.title+p {
     border-color: #3DA935;
 }
 
+.btn:focus {
+    outline: none;
+    box-shadow: none;
+}
+
 .btn-primary:hover {
     color: #3DA935;
     border-color: #3DA935;
@@ -193,6 +198,14 @@ h2.title+p {
 
 .bg-green {
     background-color: #3da935 !important;
+}
+
+.bg-light-green {
+    background-color: #bae543 !important;
+}
+
+.bg-red {
+    background-color: #ef5021 !important;
 }
 
 ul {
@@ -1522,7 +1535,8 @@ footer .social-media ul li:hover img {
     text-align: center;
 }
 
-.product-details .action .btn {
+.product-details .action .btn,
+.bottom-cta-btn {
     max-width: 767px;
     margin: 0 auto;
     display: flex;
@@ -1531,14 +1545,16 @@ footer .social-media ul li:hover img {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 
-.product-details .action .btn span {
+.product-details .action .btn span,
+.bottom-cta-btn span {
     flex: 0 0 calc(100% - 70px);
     max-width: calc(100% - 70px);
     white-space: initial;
     text-align: left;
 }
 
-.product-details .action .btn img {
+.product-details .action .btn img,
+.bottom-cta-btn img {
     flex: 0 0 50px;
 }
 
@@ -1563,11 +1579,68 @@ footer .social-media ul li:hover img {
 .producer-buyers-challenges {
     background: url(../images/producer/producer-bg-1.png) no-repeat center fixed;
     background-size: cover;
-
     margin-top: -150px;
     padding-top: 220px;
 }
 
 .producer-buyers-challenges.buyers-challenges .buyers-challenges-inner .left-inner {
     max-width: 95%;
+}
+
+
+/* products ============================= */
+
+.banner-products {
+    background-image: url(../images/products/products-banner.png) !important;
+}
+
+.banner-floating {
+    position: relative;
+    top: -15vh;
+    z-index: 99;
+}
+
+.main-product-info {
+    padding: 50px 0;
+}
+
+.main-product-info .action {
+    margin-top: 30px;
+}
+
+.main-product-info .action .btn {
+    min-width: 150px;
+}
+
+.main-product-info .logo-img {
+    max-width: 250px;
+}
+
+.product-seed-audit .right {
+    text-align: center;
+}
+
+.product-seed-audit .display-img {
+    max-width: 350px;
+}
+
+.product-trumodity {
+    background-color: #e6e5e6;
+}
+
+.product-silosys .left {
+    padding-left: 12%;
+}
+
+.product-harvx {
+    background-color: #e6e5e6;
+    position: relative;
+    z-index: 9;
+    padding-bottom: 75px;
+}
+.product-harvx .bottom-cta-btn{
+    position: absolute;
+    bottom: -30px;
+    left: 50%;
+    transform: translateX(-50%);
 }
