--- a/css/responsive.css
+++ b/css/responsive.css
@@ -805,4 +805,10 @@
         flex: 0 0 30px;
         max-width: 30px;
     }
+    .problem .problem-box .overlay{
+        font-size: 14px;
+    }
+    .problem .problem-box h5{
+        font-size: 16px;
+    }
 }
