--- a/css/style.css
+++ b/css/style.css
@@ -105,9 +105,11 @@ h2.title.orange span:after {
 h2.title.blue span:after {
     background: #0068ff;
 }
+
 h2.title.light-green span:after {
-    background: #bae543 ;
+    background: #bae543;
 }
+
 h2.title.red span:after {
     background: #ef5021;
 }
@@ -150,13 +152,14 @@ h1.title span:after {
 .text-blue {
     color: #0068ff;
 }
-.text-light-green{
-    color:#bae543 ;
-}
-.text-red{
-    color: #ef5021;
+
+.text-light-green {
+    color: #bae543;
 }
 
+.text-red {
+    color: #ef5021;
+}
 
 h2.title+p {
     font-weight: 600;
@@ -992,7 +995,7 @@ footer .social-media ul li:hover img {
 .banner-2 {
     height: 650px;
     position: relative;
-    max-height: 100vh !important;
+    /* max-height: 100vh !important; */
     background-size: 100% 100%;
     z-index: 9;
 }
@@ -1208,7 +1211,6 @@ footer .social-media ul li:hover img {
     bottom: 0;
 } */
 
-
 .benefits-box {
     padding: 20px 40px;
     background: #ffffff;
@@ -1220,11 +1222,13 @@ footer .social-media ul li:hover img {
     min-height: 130px;
     box-shadow: 0 0 5px rgba(0, 0, 0, .3);
     cursor: pointer;
-    color:#494949;
+    color: #494949;
 }
-.benefits-box:hover{
-  color:#494949;;
-  text-decoration:none;
+
+.benefits-box:hover {
+    color: #494949;
+    ;
+    text-decoration: none;
 }
 
 .benefits-box .logo-holder {
@@ -1612,24 +1616,30 @@ footer .social-media ul li:hover img {
 .banner-products {
     background-image: url(../images/products/products-banner.png) !important;
 }
-.banner-products .banner-content{
+
+.banner-products .banner-content {
     text-align: center;
 }
-.banner-products h1{
-    text-align:center;
+
+.banner-products h1 {
+    text-align: center;
 }
-.banner-products h1.title span{
+
+.banner-products h1.title span {
     padding-bottom: 20px;
 }
-.banner-products h1.title span:after{
+
+.banner-products h1.title span:after {
     left: 50%;
     transform: translateX(-50%);
 }
-.banner-products .banner-content p{
+
+.banner-products .banner-content p {
     max-width: 400px;
     margin: 0 auto;
     margin-bottom: 30px;
 }
+
 .banner-floating {
     position: relative;
     top: -15vh;
@@ -1672,10 +1682,92 @@ footer .social-media ul li:hover img {
     background-color: #e6e5e6;
     position: relative;
     z-index: 9;
-  
 }
-.product-harvx .bottom-cta-btn{
+
+.product-harvx .bottom-cta-btn {
     position: relative;
     bottom: -80px;
- 
+}
+
+
+/* careers page============================= */
+
+.banner-career {
+    background-image: url(../images/careers/banner-careers.png) !important;
+    padding-top: 200px;
+}
+
+.career-innovative-team {
+    display: flex;
+}
+
+.career-innovative-team .img-holder {
+    flex: 0 0 50%;
+    max-width: 50%;
+}
+
+.career-innovative-team .innovative-team-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 40px;
+    font-weight: 600;
+}
+
+.innovative-team-content h2.title+p {
+    max-width: 85%;
+    margin-left: 0;
+}
+
+.innovative-team-content .learn-more-tab-wrapper {
+    margin-top: 30px;
+}
+
+.innovative-team-content .learn-more-tab-wrapper ul {
+    display: flex;
+}
+
+.innovative-team-content .learn-more-tab-wrapper ul li {
+    margin-right: 20px;
+}
+
+.innovative-team-content .learn-more-tab-wrapper ul li a {
+    color: #969696;
+    font-weight: 700;
+    display: inline-block;
+    padding: 10px 0;
+    border-bottom: 3px solid #969696;
+    font-size: 18px;
+}
+
+.innovative-team-content .learn-more-tab-wrapper ul li:hover a {
+    color: #3da935;
+    border-color: #3da935;
+    text-decoration: none;
+}
+
+.current-openings {
+    padding: 75px 0;
+    background-color: #f6f6f6;
+    position: relative;
+    z-index: 9;
+}
+
+.openings-list {
+    padding: 30px 0;
+}
+
+
+
+.openings-list .opening-box {
+    display: flex;
+    align-items: flex-start;
+    padding: 50px 0;
+}
+.opening-box .opening-content {
+    padding-left: 10px;
+    font-weight: 600;
+}
+.opening-box .opening-content p {
+    margin-bottom: 0
 }
